<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>particle_filter</name>
  <version>0.0.1</version>
  <description>This package provides a library for particle filters in ROS.</description>

  <maintainer email="2hartfil@informatik.uni-hamburg.de">Judith Hartfill</maintainer>
  <maintainer email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="2hartfil@informatik.uni-hamburg.de">Judith Hartfill</author>
  <author email="5fiedler@informatik.uni-hamburg.de">Niklas Fiedler</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rosconsole</depend>
  <depend>eigen_conversions</depend>

  <export>
    <bitbots_documentation>
      <status>unknown</status>
      <language>c++</language>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
